--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,37 @@ body {
   font-weight: 300;
   font-style: normal;
   margin: 2em;
+  height: 100%;
+}
+
+.container {
+  height: 100%;
 }
 
 h1 {
   font-style: italic;
-  color: pink;
+  color: #707070;
+}
+
+.blueButton {
+  background-color: #8bd8e2
+}
+
+.roundButton {
+  border-radius: 50%;
+  background-color: white;
+  color: #8bd8e2;
+
+}
+
+
+.button {
+  border: white;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
 }
