--- a/css/style.css
+++ b/css/style.css
@@ -25,29 +25,25 @@ body {
 }
 
 h1 {
-  font-style: italic;
   color: #707070;
 }
 
+h4 {
+  color: #8bd8e2;
+  font-style: bold;
+  margin: 4px 2px;
+}
+
 .blueButton {
-  background-color: #8bd8e2
+  background-color: #8bd8e2;
+  text-align: center;
+  color: white;
+  margin: 4px 2px;
 }
 
 .roundButton {
   border-radius: 50%;
   background-color: white;
   color: #8bd8e2;
-
-}
-
-
-.button {
-  border: white;
-  color: white;
   padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
 }
