--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ body {
   font-weight: 300;
   font-style: normal;
   margin: 2em;
-  height: 100%;
+  height: 896;
+  width: 976;
 }
 
 .borderBlue {
